added compression and readme, some structural changes

--- a/core/src/engine/project.json
+++ b/core/src/engine/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "example",
-  "version": "41.1",
-  "parent_folder": "../../example"
+  "name": "RSF-MIT",
+  "version": "41.2",
+  "parent_folder": "../../../example"
 }
