--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -21,6 +21,8 @@ notify = "6.1"
 colored = "2.1"
 anyhow = "1.0"
 thiserror = "1.0"
+flate2 = "1.0"
+async-compression = { version = "0.4", features = ["tokio", "gzip", "brotli", "zstd"] }
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 tikv-jemallocator = "0.6"
