--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -23,6 +23,8 @@ anyhow = "1.0"
 thiserror = "1.0"
 flate2 = "1.0"
 async-compression = { version = "0.4", features = ["tokio", "gzip", "brotli", "zstd"] }
+tokio-tungstenite = "0.21"
+futures-util = "0.3"
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 tikv-jemallocator = "0.6"
